Desafio Kotlin- Versão Final

--- a/Desafio Final - versão 1.1
+++ b/Desafio Final - versão 1.1
@@ -15,8 +15,8 @@ data class Formacao(val nome: String, var conteudos: List<ConteudoEducacional>, 
     
     fun imprimirConteudo (){
      for (tudo in conteudos){
-         println ("${tudo.nome} - ${tudo.duracao}")
-         print("horas")
+         print("${tudo.nome} - ${tudo.duracao}")
+         print(" horas")
          println()
         
          } 
